--- a/index.html
+++ b/index.html
@@ -6,10 +6,59 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+
+    <!-- Bootstrap files -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
     <title>Quizapp</title>
 </head>
 
-<body>
+<body class="body" onload="init()">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-md">
+            <a class="navbar-brand" href="#">Quizapp</a>
+        </div>
+    </nav>
+
+    <div class="container">
+        <div class="card quizcard mb-3">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img src="..." class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <div class="card mb-2">
+                            <div class="card-body">
+                                Antwort
+                            </div>
+                        </div>
+                        <div class="card mb-2">
+                            <div class="card-body">
+                                Antwort
+                            </div>
+                        </div>
+                        <div class="card mb-2">
+                            <div class="card-body">
+                                Antwort
+                            </div>
+                        </div>
+                        <div class="card mb-2">
+                            <div class="card-body">
+                                Antwort
+                            </div>
+                        </div>
+                        <div class="question-footer">
+                            <span><b>1</b> von <b>5</b> Fragen</span>
+                            <button type="button" class="btn btn-primary">Nächste Frage</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 
