questioncard design answer function

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         </div>
                         <div class="question-footer">
                             <span><b>1</b> von <b id="pageNumber">5</b> Fragen</span>
-                            <button type="button" class="btn btn-primary">Nächste Frage</button>
+                            <button type="button" id="next-button" class="btn btn-primary" disabled>Nächste Frage</button>
                         </div>
                     </div>
                 </div>
