--- a/index.html
+++ b/index.html
@@ -23,12 +23,23 @@
 
     <div class="container">
         <div class="card quizcard mb-3">
+            <div class="progress">
+                <div class="progress-bar" role="progressbar" id="progress-bar" style="width: 0%;" aria-valuemin="0" aria-valuemax="100">25%</div>
+            </div>
             <div class="row g-0">
                 <div class="col-md-4">
                 </div>
                 <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title" id="questiontext">Card title</h5>
+                    <div id="endSrceen" class="card-body endScreen" style="display: none;">
+                        <img class="brainPic" src="img/brain result.png" alt="">
+                        <p>COMPLETE<br>HTML QUIZ</p>
+                        <p><span>YOUR SCORE</span><b id="score"></b><b id="questionNumber1.0"></b></p>
+                        <button type="button" class="btn btn-primary btn-sm">Small button</button>
+                        <button type="button" class="btn btn-link">Link</button>
+                        <img class="trophy" src="img/tropy.png" alt="">
+                    </div>
+                    <div class="card-body" id="questionBody">
+                        <h5 class="card-title" id="questionText">Card title</h5>
                         <div class="answerField card mb-2">
                             <div class="card-body" id="answer_1" onclick="answer('answer_1')">
                             </div>
@@ -46,9 +57,10 @@
                             </div>
                         </div>
                         <div class="question-footer">
-                            <span><b>1</b> von <b id="pageNumber">5</b> Fragen</span>
-                            <button type="button" id="next-button" class="btn btn-primary" disabled>Nächste Frage</button>
+                            <span><b id="questionNumber">1</b> von <b id="pageNumber">5</b> Fragen</span>
+                            <button type="button" id="next-button" class="btn btn-primary" disabled onclick="nextQuestion()">Nächste Frage</button>
                         </div>
+
                     </div>
                 </div>
             </div>
