--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                         <img class="brainPic" src="img/brain result.png" alt="">
                         <p>COMPLETE<br>HTML QUIZ</p>
                         <p><span>YOUR SCORE</span><b id="score"></b><b id="questionNumber1.0"></b></p>
-                        <button type="button" class="btn btn-primary btn-sm">Small button</button>
-                        <button type="button" class="btn btn-link">Link</button>
+                        <button type="button" class="btn btn-primary btn-sm">SHARE</button>
+                        <button type="button" class="btn btn-link" onclick="replay()">REPLAY</button>
                         <img class="trophy" src="img/tropy.png" alt="">
                     </div>
                     <div class="card-body" id="questionBody">
