--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&family=Rubik:wght@400;700&display=swap" rel="stylesheet">
 
     <!-- Bootstrap files -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -20,25 +25,37 @@
             <a class="navbar-brand" href="#">Quizapp</a>
         </div>
     </nav>
-
     <div class="container">
-        <div class="card quizcard mb-3">
+        <div class="card quizcard">
             <div class="progress">
                 <div class="progress-bar" role="progressbar" id="progress-bar" style="width: 0%;" aria-valuemin="0" aria-valuemax="100">25%</div>
             </div>
             <div class="row g-0">
                 <div class="col-md-4">
+                    <div class="containerQuizChoice">
+                        <img src="img/logo.png" alt="">
+                        <button onclick="questions_HTML()">HTML</button>
+                        <button onclick="questions_CSS()">CSS</button>
+                        <button onclick="questions_JS()">JS</button>
+                        <button onclick="questions_Responsive()">Responsive</button>
+                    </div>
                 </div>
                 <div class="col-md-8">
+                    <div id="startScreen" class="card-body startScreen">
+                        <p><b>Welcome to<br> the awsome <span id="quizName" class="quizName">HTML</span> Quiz</b>
+                        </p>
+                        <span>Ready for the Challenge?</span>
+                        <button type="button" class="btn btn-primary btn-sm" onclick="startGame()">START NOW</button>
+                    </div>
                     <div id="endSrceen" class="card-body endScreen" style="display: none;">
                         <img class="brainPic" src="img/brain result.png" alt="">
                         <p>COMPLETE<br>HTML QUIZ</p>
-                        <p><span>YOUR SCORE</span><b id="score"></b><b id="questionNumber1.0"></b></p>
+                        <p><span class="orange">YOUR SCORE</span><b id="score"></b><b id="questionNumber1.0"></b></p>
                         <button type="button" class="btn btn-primary btn-sm">SHARE</button>
                         <button type="button" class="btn btn-link" onclick="replay()">REPLAY</button>
                         <img class="trophy" src="img/tropy.png" alt="">
                     </div>
-                    <div class="card-body" id="questionBody">
+                    <div class="card-body" id="questionBody" style="display: none;">
                         <h5 class="card-title" id="questionText">Card title</h5>
                         <div class="answerField card mb-2">
                             <div class="card-body" id="answer_1" onclick="answer('answer_1')">
